--- a/fablabman/pom.xml
+++ b/fablabman/pom.xml
@@ -26,7 +26,7 @@
 	</licenses>
 
 	<properties>
-		<wicket.version>1.5.2</wicket.version>
+		<wicket.version>1.4.19</wicket.version>
 		<seam.wicket.version>3.0.0.Final</seam.wicket.version>
 		<cdi.api.version>1.0-SP4</cdi.api.version>
 		<resteasy.version>2.2.1.GA</resteasy.version>
@@ -58,10 +58,20 @@
            </exclusion>
          </exclusions>
       </dependency>
-	  
+	           <dependency>
+         	<groupId>org.apache.wicket</groupId>
+         	<artifactId>wicket-extensions</artifactId>
+         	<version>${wicket.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>         	
+         </dependency>
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
-			<artifactId>wicket-core</artifactId>
+			<artifactId>wicket</artifactId>
 			<version>${wicket.version}</version>
 			<exclusions>
 				<exclusion>
@@ -155,6 +165,7 @@
          	<artifactId>jsr311-api</artifactId>
          	<version>1.1.1</version>
          </dependency>
+
 	</dependencies>
 
 	<build>
