--- a/fablabman/pom.xml
+++ b/fablabman/pom.xml
@@ -30,6 +30,7 @@
 		<seam.wicket.version>3.0.0.Final</seam.wicket.version>
 		<cdi.api.version>1.0-SP4</cdi.api.version>
 		<resteasy.version>2.2.1.GA</resteasy.version>
+		<hibernate.version>3.6.8.Final</hibernate.version>
 	</properties>
 
 	
@@ -40,11 +41,36 @@
 	    </repository>
 	 </repositories>
 	<dependencies>
+	    <!-- persistence -->
+	    <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+	    <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
+        
+         <dependency>
+         	<groupId>org.hsqldb</groupId>
+         	<artifactId>hsqldb</artifactId>
+         	<version>2.2.4</version>
+         </dependency>        
+	    <!-- webservices -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
             <version>${resteasy.version}</version>
 		</dependency>	
+         <dependency>
+         	<groupId>javax.ws.rs</groupId>
+         	<artifactId>jsr311-api</artifactId>
+         	<version>1.1.1</version>
+         </dependency>
+		
 		<!--  WICKET DEPENDENCIES -->
       <dependency>
          <groupId>org.jboss.seam.wicket</groupId>
@@ -160,11 +186,7 @@
          	<artifactId>jboss-logging-logmanager</artifactId>
          	<version>2.2.0.CR2</version>
          </dependency>
-         <dependency>
-         	<groupId>javax.ws.rs</groupId>
-         	<artifactId>jsr311-api</artifactId>
-         	<version>1.1.1</version>
-         </dependency>
+
 
 	</dependencies>
 
@@ -212,6 +234,7 @@
                      <includes>
                         <include>**/beans.xml</include>
                         <include>**/context.xml</include>
+                        <incldue>**/peristence.xml</incldue>
                      </includes>
                      <excludes>
                             <exclude>**/maven/*</exclude>
@@ -239,6 +262,7 @@
                      <includes>
                         <include>**/beans.xml</include>
                         <include>**/web.xml</include>
+                        <incldue>**/peristence.xml</incldue>
                      </includes>
                   </resource>
                </webResources>
