--- a/fablabman/src/main/resources/log4j.properties
+++ b/fablabman/src/main/resources/log4j.properties
@@ -4,10 +4,10 @@ log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.rootLogger=INFO,Stdout
 
-log4j.logger.org.apache.wicket=DEBUG
-log4j.logger.org.apache.wicket.protocol.http.HttpSessionStore=DEBUG
-log4j.logger.org.apache.wicket.version=DEBUG
-log4j.logger.org.apache.wicket.RequestCycle=DEBUG
+log4j.logger.org.apache.wicket=INFO
+log4j.logger.org.apache.wicket.protocol.http.HttpSessionStore=INFO
+log4j.logger.org.apache.wicket.version=INFO
+log4j.logger.org.apache.wicket.RequestCycle=INFO
 
-log4j.logger.org.jboss.weld=DEBUG
-log4j.logger.org.jboss.resteasy=DEBUG
+log4j.logger.org.jboss.weld=INFO
+log4j.logger.org.jboss.resteasy=INFO
