--- a/fablabman/pom.xml
+++ b/fablabman/pom.xml
@@ -84,7 +84,7 @@
            </exclusion>
          </exclusions>
       </dependency>
-	           <dependency>
+	   <dependency>
          	<groupId>org.apache.wicket</groupId>
          	<artifactId>wicket-extensions</artifactId>
          	<version>${wicket.version}</version>
@@ -94,7 +94,7 @@
 					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>         	
-         </dependency>
+      </dependency>
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket</artifactId>
@@ -106,6 +106,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+      <dependency>
+         <groupId>org.apache.wicket</groupId>
+         <artifactId>wicket-auth-roles</artifactId>
+         <version>${wicket.version}</version>
+         <exclusions>
+            <exclusion>
+               <artifactId>slf4j-api</artifactId>
+               <groupId>org.slf4j</groupId>
+            </exclusion>
+         </exclusions>
+      </dependency>		
+		
 		<!--  Weld DEPENDENCIES -->
       <dependency>
          <groupId>javax.enterprise</groupId>
