Rechnungslisten fertig, inclusive sortieren und filtern. CSV export funktioniert. Consumables können angelegt werden. Rechnungsdetailansicht/template teilweise gelayouted.

--- a/fablabman/src/main/java/at/happylab/fablabtool/FabLabManApplication.properties
+++ b/fablabman/src/main/java/at/happylab/fablabtool/FabLabManApplication.properties
@@ -10,3 +10,6 @@ MembershipStatus.HONORARY=ehren
 PaymentMethod.CASH_IN_ADVANCE=Vorauskassa
 PaymentMethod.DEBIT=Lastschrift
 PaymentMethod.ON_ACCOUNT=auf Rechnung
+InvoiceState.OPEN=offen
+InvoiceState.PAID=bezahlt
+InvoiceState.CANCELLED=storniert
