Changelog in der Email vom 31.12.2011

--- a/fablabman/src/main/java/at/happylab/fablabtool/FabLabManApplication.properties
+++ b/fablabman/src/main/java/at/happylab/fablabtool/FabLabManApplication.properties
@@ -13,3 +13,16 @@ PaymentMethod.ON_ACCOUNT=auf Rechnung
 InvoiceState.OPEN=offen
 InvoiceState.PAID=bezahlt
 InvoiceState.CANCELLED=storniert
+DayOfWeek.MONDAY=Montag
+DayOfWeek.TUESDAY=Dienstag
+DayOfWeek.WEDNESDAY=Mittwoch
+DayOfWeek.THURSDAY=Donnerstag
+DayOfWeek.FRIDAY=Freitag
+DayOfWeek.SATURDAY=Samstag
+DayOfWeek.SUNDAY=Sonntag
+PackageType.MEMBERSHIP=Mitgliedschaft
+PackageType.ACCESS=Zutritt
+PackageType.STORAGE=Spind
+TimePeriod.MONTHLY=monatlich
+TimePeriod.QUARTER=quartal
+TimePeriod.ANNUAL=jährlich
