--- a/fablabman/pom.xml
+++ b/fablabman/pom.xml
@@ -211,6 +211,12 @@
          </dependency>
 
 
+         <dependency>
+         	<groupId>net.sourceforge.htmlunit</groupId>
+         	<artifactId>htmlunit</artifactId>
+         	<version>2.9</version>
+         	<scope>test</scope>
+         </dependency>
 	</dependencies>
 
 	<build>
