refactoring: * access to persistence layer: BaseDAO for basic load, store, ... functionality,   derived classes where additional loaders are neccessary * Detachable Models: SmartModel, reloads entity when necessary   NOTE: only some views (Membership Data and Subscription page) are based completely on this DetachableModel   the other views need to be adjusted * entitymanager is now obtained and released per request * code clean up in some places not completed yet, but there is a light...
refs #6021

--- a/fablabman/src/main/resources/log4j.properties
+++ b/fablabman/src/main/resources/log4j.properties
@@ -11,3 +11,6 @@ log4j.logger.org.apache.wicket.RequestCycle=INFO
 
 log4j.logger.org.jboss.weld=INFO
 log4j.logger.org.jboss.resteasy=INFO
+
+log4j.logger.net.micalo=DEBUG
+log4j.logger.at.happylab=DEBUG
